# textract

./: .actrc  .coveragerc  .gitattributes  .gitignore  .pyup.yml  .readthedocs.yaml  .travis.yml  Brewfile  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  Vagrantfile  hk.pkl  log.txt  mise.toml  pyproject.toml  setup.cfg  setup.py  syncing.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup/: action.yml
.github/workflows/: bump_version.yml  ci_pipeline.yml
backup/: CONTRIBUTING.md  LICENSE  Vagrantfile  setup.cfg  setup.py
backup/github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backup/provision/: debian.sh  python2.sh
backup/requirements/: python
docker/: Dockerfile  doc.md  run.sh
docs/: Makefile  changelog.j2  changelog.rst  command_line_interface.rst  conf.py  contributing.rst  index.rst  installation.rst  local-testing.md  platform_differences.rst  python_package  python_package.rst  release_notes.md.j2
provision/: debian.sh  development.sh  fake-pocketsphinx.sh  python.sh  python3.sh  travis-mock.sh
requirements/: Dockerfile  debian  debian.sh  doc.md  freebsd  python  python+compile  python-2  python-dev  python-dev2  python-dev3  python-doc  python.sh  run.sh  run_docker_tests.sh  run_tests.sh
scripts/: bump_version.py  prepend-changelog.sh  test-with-act.sh
tests/: Dockerfile  Dockerfile.no-swig  Makefile  base.py  docker_entry.sh  platform_limitations.py  run_docker_tests.sh  run_functional_tests.sh  run_no_swig_tests.sh  test_csv.py  test_detect_filetype.py  test_doc.py  test_docx.py  test_eml.py  test_epub.py  test_exceptions.py  test_formats.py  test_gif.py  test_html.py  test_jpg.py  test_json.py  test_mp3.py  test_msg.py  test_no_ext.py  test_ods.py  test_odt.py  test_ogg.py  test_pdf.py  test_platform_limitations.py  test_png.py  test_pptx.py  test_ps.py  test_psv.py  test_rtf.py  test_source_input.py  test_special_filenames.py  test_tiff.py  test_tsv.py  test_txt.py  test_utils.py  (+3 more)
tests/csv/: cyrillic_cp1251.csv  cyrillic_cp1251.txt  raw_text.txt
tests/data/csv/: raw_text.csv  standardized_text.csv
tests/data/doc/: raw_text.txt  standardized_text.doc
tests/data/docx/: raw_text.txt  standardized_text.docx
tests/data/epub/: raw_text.txt
tests/data/json/: raw_text.txt  standardized_text.json
tests/data/msg/: raw_text.txt
tests/data/odt/: standardized_text.odt
tests/data/ogg/: raw_text.txt
tests/data/pdf/: raw_text.txt  two_column.txt
tests/data/pptx/: standardized_text.pptx
tests/data/ps/: raw_text.ps  raw_text.txt  standardized_text.ps
tests/data/rtf/: raw_text.txt  standardized_text.rtf
tests/data/tiff/: raw_text.tiff  standardized_text.tiff
tests/data/xls/: raw_text.txt  raw_text.xls
tests/data/xlsx/: raw_text.txt
tests/doc/: i_heart_word.doc  raw_text.txt
tests/docx/: paragraphs_and_tables.txt  raw_text.docx  raw_text.txt
tests/eml/: cyrillic_cp1251.eml  cyrillic_cp1251.txt  raw_text.txt  standardized_text.eml
tests/epub/: raw_text.txt
tests/freeze/: app.py  freeze_setup.py  smoke_test.py
tests/gif/: raw_text.txt
tests/html/: cyrillic_cp1251.html  cyrillic_cp1251.txt  raw_text.html  raw_text.txt  tables.html  tables.txt  what-we-do.html
tests/jpg/: raw_text.txt
tests/json/: chinese.json  chinese.txt  cyrillic.json  cyrillic.txt  cyrillic_cp1251.json  cyrillic_cp1251.txt  emoji.json  emoji.txt  json_is_my_best_friend.json  mixed_scripts.json  mixed_scripts.txt  raw_text.json
tests/mp3/: raw_text.txt
tests/msg/: raw_text.msg  raw_text.txt  standardized_text.msg
tests/no_ext/: docx_paragraphs_and_tables
tests/ods/: raw_text.ods  raw_text.txt  standardized_text.ods
tests/odt/: i_heart_odt.odt  raw_text.odt  raw_text.txt
tests/ogg/: raw_text.txt
tests/pdf/: ocr_text-m=tesseract.txt  ocr_text.txt  raw_text-m=pdfminer.txt  test_pdf.py  two_column.txt  two_column.txt.backup
tests/png/: raw_text.txt
tests/ppt/: raw_text.ppt  standardized_text.ppt
tests/ps/: raw_text.txt  standardized_text.txt
tests/psv/: raw_text.psv  raw_text.txt  standardized_text.psv
tests/rtf/: raw_text.txt
tests/tiff/: standardized_text.txt
tests/tsv/: raw_text.tsv  standardized_text.tsv
tests/xlsx/: raw_text.txt
textract/: .coveragerc  __init__.py  cli.py  colors.py  exceptions.py  setup.py  shell.py  utils.py
textract/MsgExtractor/: ExtractMsg.py  OleFileIO_PL.py  README.md  __init__.py
textract/docs/: changelog.rst  command_line_interface.rst  python_package.rst
textract/parsers/: __init__.py  audio.py  csv_parser.py  doc.py  doc_parser.py  docx.py  docx_parser.py  eml_parser.py  epub_parser.py  filetype.py  gif_parser.py  html.py  html_parser.py  image.py  jpg_parser.py  json2.py  json_parser.py  mp3_parser.py  msg_parser.py  ods_parser.py  odt_parser.py  ogg_parser.py  pdf.py  pdf_parser.py  png_parser.py  ppt_parser.py  pptx.py  pptx_parser.py  ps_parser.py  psv_parser.py  rtf_parser.py  sox.py  tesseract.py  tiff_parser.py  tsv_parser.py  txt.py  txt_parser.py  utils.py  wav_parser.py  xls_parser.py  (+1 more)
textract/requirements/: python
textract/tests/: base.py  docker_entry.sh  run.py  test_docx.py  test_gif.py  test_html.py  test_mp3.py  test_odt.py  test_png.py  test_pptx.py  test_rtf.py  test_txt.py  test_xls.py  test_xlsx.py
textract/tests/doc/: standardized_text_1.odt
textract/tests/eml/: raw_text.eml
textract/tests/epub/: raw_text.epub  standardized_text.epub
textract/tests/html/: raw_text.txt  standardized_text.html
textract/tests/odt/: raw_text.txt
textract/tests/pdf/: raw_text-m=pdfminer.txt
textract/tests/pptx/: raw_text.pptx  raw_text.txt
textract/tests/rtf/: raw_text.rtf
textract/tests/tiff/: raw_text.txt  standardized_text.txt
textract/tests/txt/: raw_text.txt
textract/tests/xls/: standardized_text.xls
textract/tests/xlsx/: raw_text.xlsx  standardized_text.xlsx
textract/textract/: __init__.py  colors.py  exceptions.py
textract/textract/parsers/: __init__.py  csv_parser.py  docx_parser.py  html_parser.py  image.py  mp3_parser.py  msg_parser.py  odt_parser.py  (+4 more)
