[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.7,<2"]

[project]
authors = [{name = "Dean Malmgren", email = "dean.malmgren@datascopeanalytics.com"}]
maintainers = [{name = "Kyle King", email = "dev.act.kyle@gmail.com"}]
description = "extract text from any document. no muss. no fuss. "
license = {text = "MIT"}
name = "textract"
readme = "README.rst"
requires-python = ">=3.9"
version = "2.0.0"
dependencies = [
    "Pillow>=9.0.0",
    "SpeechRecognition>=3.8.1",
    "argcomplete>=3.6.3",
    "beautifulsoup4>=4.8.0",
    "lxml>=4.9.0",
    "chardet>=5.2.0",
    "docx2txt>=0.8",
    "extract-msg>=0.40.0",
    "pdfminer.six>=20221105",
    "python-pptx>=0.6.18",
    "xlrd>=1.2.0,<2.0.0",  # v2 drops support for xlsx. Requires openpyxl or alternative to support xlsx if upgrading xlrd. See: https://github.com/deanmalmgren/textract/pull/543#issuecomment-2684619988
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-argparse>=0.4",
    "sphinx-rtd-theme>=2.0",
]
pocketsphinx = ["pocketsphinx>=0.1.15"]

[project.scripts]
textract = "textract.bin.textract:main"

[project.urls]
Repository = "https://github.com/deanmalmgren/textract"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=7.2.1",
    "ruff>=0.14.13",
    "textract[pocketsphinx]",
]
vulnerable_packages = [
    "Pygments>=2.20.0",
    "cryptography>=46.0.6",
    # "pillow>=12.1.1",  # PLANNED:Requires Python 3.10
    # "requests>=2.33.0",  # PLANNED:Requires Python 3.10
]

[tool.uv.build-backend]
module-name = "textract"
module-root = ""

[tool.pyright]
include = ["textract", "tests"]
pythonVersion = "3.9"

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: uv run ruff rule RUF100
target-version = 'py39'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short", "-ra"]
python_classes = ["*TestCase", "Test*"]
filterwarnings = [
    "ignore:aifc was removed in Python 3.13:DeprecationWarning:speech_recognition",
]
