[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.7,<2"]

[project]
authors = [{name = "Dean Malmgren", email = "dean.malmgren@datascopeanalytics.com"}]
maintainers = [{name = "Kyle King", email = "dev.act.kyle@gmail.com"}]
description = "extract text from any document. no muss. no fuss. "
license = {text = "MIT"}
name = "textract"
readme = "README.rst"
requires-python = ">=3.10"
version = "2.0.0"
dependencies = [
    "Pillow>=12.2.0",
    "SpeechRecognition>=3.8.1",
    "argcomplete>=3.6.3",
    "beautifulsoup4>=4.8.0",
    "lxml>=4.9.0",
    "chardet>=5.2.0",
    "docx2txt>=0.8",
    "extract-msg>=0.40.0",
    "pdfminer.six>=20221105",
    "python-pptx>=0.6.18",
    "openpyxl>=3.0.0",  # Replaces xlrd for Excel file support (xlrd 2.0+ dropped xlsx support)
    "xlrd>=2.0.0",  # Supports legacy .xls files (openpyxl does not support .xls)
    "odfpy>=1.4.1",  # Supports .ods files (OpenDocument Spreadsheet)
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-argparse>=0.4",
    "sphinx-rtd-theme>=2.0",
]
pocketsphinx = ["pocketsphinx>=0.1.15"]

[project.scripts]
textract = "textract.bin.textract:main"

[project.urls]
Repository = "https://github.com/deanmalmgren/textract"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.14.13",
    "textract[pocketsphinx]",
]
freeze = ["cx-Freeze>=7.0"]
vulnerable_packages = [
    "Pygments>=2.20.0",
    "cryptography>=48.0.1",
    "idna>=3.15",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
]

[tool.uv.build-backend]
module-name = "textract"
module-root = ""

[tool.pyright]
include = ["textract", "tests"]
pythonVersion = "3.10"

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: uv run ruff rule RUF100
target-version = 'py310'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short", "-ra"]
python_classes = ["*TestCase", "Test*"]
filterwarnings = [
    "ignore:aifc was removed in Python 3.13:DeprecationWarning:speech_recognition",
    "ignore:.* extension is not supported and will be removed:UserWarning:openpyxl",
]
